fix: adapt dataspace options width & its overflow

--- a/src/components/dataspaceDashboard/dataspaceSummary/dataspaceSummary.scss
+++ b/src/components/dataspaceDashboard/dataspaceSummary/dataspaceSummary.scss
@@ -79,8 +79,10 @@
       grid-column: 3;
       display: grid;
       row-gap: 15px;
+      width: fit-content;
       max-height: inherit;
       overflow-y: auto;
+      overflow-x: hidden;
       @media screen and (max-width: 995px) {
         grid-area: 2/ 1 / 2 / 3;
       }
